--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""
     />
-    <title>House Marketplace</title>
+    <title>Mall for Home</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
